objects/CSIRCD__ATTUSWDSLeads__c.object
<CustomObject>
    <customHelpPage>CSIRCD__CSIHelp</customHelpPage>
    <description>Results from a lookup using CSI Watch List Check on Leads.</description>
    <fields>
        <fullName>CSIRCD__Address_Type__c</fullName>
        <label>Address Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Last_Reviewed__c</fullName>
        <label>Last Reviewed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>CSI_Watch_List_Check</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSIRCD__List_Date__c</fullName>
        <label>List Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSIRCD__List_Description__c</fullName>
        <label>List Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Lookup_By__c</fullName>
        <label>Lookup By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Name_Searched__c</fullName>
        <label>Name Searched</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Number_of_Hits__c</fullName>
        <label># of Hits</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Result_Node__c</fullName>
        <label>Result Node</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Reviewed</fullName>
                </value>
                <value>
                    <fullName>False Positive</fullName>
                </value>
                <value>
                    <fullName>True Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSIRCD__Search_City__c</fullName>
        <label>Search City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Search_Country__c</fullName>
        <label>Search Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Search_Postal_Code__c</fullName>
        <label>Search Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Search_State__c</fullName>
        <label>Search State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Search_Street__c</fullName>
        <label>Search Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Status_Value__c</fullName>
        <formula>IF(CSIRCD__Number_of_Hits__c = 0, &quot;Green&quot;,
 IF(text(CSIRCD__Review_Status__c) = &quot;Not Reviewed&quot;, &quot;Yellow&quot;,
  IF(text(CSIRCD__Review_Status__c) = &quot;True Match&quot;, &quot;Red&quot;, 
  &quot;Green&quot;
  )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSIRCD__Status__c</fullName>
        <formula>image( if(CSIRCD__Number_of_Hits__c = 0, &quot;/img/samples/flag_green.gif&quot;,if(text(CSIRCD__Review_Status__c) = &quot;Not Reviewed&quot; ,&quot;/img/samples/flag_yellow.gif&quot;,if(text(CSIRCD__Review_Status__c) = &quot;True Match&quot;,&quot;/img/samples/flag_red.gif&quot;,&quot;/img/samples/flag_green.gif&quot;))), &quot;Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>CSI Watch List Check on Lead</label>
    <nameField>
        <displayFormat>LU-{0000}</displayFormat>
        <label>CSI WatchDOG Lookups</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSI Watch List Check on Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CSIRCD__Review_status_is_No_Match_if_Hits_Are_0</fullName>
        <active>true</active>
        <description>Review Status must remain No Match if number of hits is 0.</description>
        <errorConditionFormula>AND ( CSIRCD__Number_of_Hits__c =0, NOT( ISPICKVAL( CSIRCD__Review_Status__c , &quot;No Match&quot;) ))</errorConditionFormula>
        <errorMessage>Changes to Review Status field aren&apos;t allowed if number of hits is 0. Review Status must be No Match if number of hits is 0.</errorMessage>
    </validationRules>
</CustomObject>